<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/SettingLL1">
    <LinearLayout
        android:id="@+id/SettingLL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChangeUsername"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/SettingLL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/SettingUsernameInput"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_box_outline"
                android:iconifiedByDefault="false"
                android:hint="Enter username"
                android:paddingLeft="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SettingLL4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NewPhoneNumber"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/SettingLL5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/SettingPhoneNumInput"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_box_outline"
                android:iconifiedByDefault="false"
                android:hint="Enter Phone Number"
                android:paddingLeft="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SettingLL6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_email"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/SettingLL7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/SettingEmailInput"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_box_outline"
                android:iconifiedByDefault="false"
                android:hint="Enter Email"
                android:paddingLeft="10dp"/>


        </LinearLayout>
    </LinearLayout>


    <Switch
        android:id="@+id/SettingSwitch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="Enable Geo Location"
        android:textSize="20dp" />

    <Button
        android:id="@+id/SettingSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />

    <Button
        android:id="@+id/SettingBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:text="@string/Back" />

</LinearLayout>