<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ProfileFragment"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:id="@+id/ProfileLL1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ProfileLL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ProfileImage"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:src="@drawable/other_user_pf" />

            <LinearLayout
                android:id="@+id/ProfileLL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="UserName:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ProfileEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Email:"
                    android:textStyle="bold" />

                <TextView
                android:id="@+id/ProfilePhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Phone Number:"
                android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ProfileLL4"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ProfileUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ProfileUserEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ProfileUserPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/ProfileSettingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/setting" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ProfileLL5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ProfileLL6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rank of Highest Scoring Gem:"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total Score:"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Number of QR scanned:"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ProfileLL7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/ProfileRank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ProfileTS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ProfileQRNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ProfileLL8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="@string/Highest_QR"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lowest_QR"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ProfileLL9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ProfileHighest_QR"
                android:layout_width="205dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/ProfileLowest_QR"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ProfileLL10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Other QR"
                android:textStyle="bold"></TextView>

            <ListView
                android:id="@+id/ProfileQR_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>